added explanation and modified qr code.

--- a/src/pages/SignUp.module.css
+++ b/src/pages/SignUp.module.css
@@ -3,6 +3,15 @@
   flex-direction: column;
 }
 
+.qrPage {
+  text-align: center;
+}
+
+.qrDescription {
+  font-size: x-large;
+  margin: 5%;
+}
+
 .qrCode {
   margin: 20px;
 }
